<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="app_name">START</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="progressReport"></string>
    <string name="company">KAINOTOMIA</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="search">Search</string>
    <string name="prompt">Enter Your IP</string>
    <string name="go">GO</string>
    <string name="connect">Connect</string>
    <string name="history">HISTORY</string>
    <string name="trackpad">TrackPad</string>
    <string name="title_activity_about">About</string>
    <string name="Credits">CREDIT</string>
    <string name="akx"># AKASH GIRI</string>
    <string name="nix"># Deepankar Sinha (CEO of KAINOTOMIA PVT. LTD.)</string>
    <string name="title_activity_log_generator">LogGenerator</string>
    <string name="log">LOG</string>
    <string name="cmd">Portable Command Prompt</string>
    <string name="run">RUN</string>
    <string name="about_akash">Student of Computer Science Engineering,</string>
    <string name="about_akash1">Netaji Subhash Engineering College,</string>
    <string name="about_akash2">Kolkata, West Bengal, India</string>
    <string name="email">e-Mail : akx.sonu@gmail.com</string>
    <string name="phone">Phone : +91 980-4945-122</string>
    <string name="p1">+91 898-1305-046</string>
    <string name="shut">SHUT DOWN</string>
    <string name="title_activity_log">Log</string>

</resources>
