<com.kainotomia.start.view.viewgroup.FlyOutContainer xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   
   

   <RelativeLayout
       
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/applog"
       android:layout_width="197dp"
       android:layout_height="match_parent"
       android:background="#000000" >

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:text="@string/cmd"
           android:textColor="#ffffff"
           android:textStyle="bold" />

       <EditText
           android:id="@+id/command"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:ems="10"
           android:inputType="textMultiLine" 
           android:layout_marginTop="20dp"
           android:textColor="#10D51A"
         
           >
		   
           <requestFocus />
       </EditText>

       <Button
           android:id="@+id/button1"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="60dp"
           android:layout_marginTop="55dp"
           android:text="@string/run"
           android:textColor="#ffffff"
             android:onClick="runcmd" />

       <ImageView
           android:id="@+id/imageView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="200dp"
          android:onClick="speech"
           android:src="@drawable/noun_5027_cc" />

       <ImageView
           android:id="@+id/imageView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:onClick="restart"
           android:src="@drawable/restart" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="RESTART"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="220dp"
           android:textColor="#ffffff"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="260dp"
           android:text="@string/shut"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="#ffffff" />

       <ImageView
           android:id="@+id/imageView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="255dp"
           android:onClick="shutdown"
           android:src="@drawable/power" />

</RelativeLayout>

   <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#444488"
    
       android:layout_marginLeft="15dp"
       android:orientation="horizontal" >

   </LinearLayout>

</com.kainotomia.start.view.viewgroup.FlyOutContainer>